kubernetes/cert-manager/ca-download/deployment.yaml
# Since the HTML is mounted with subPath, changes to the ConfigMap do not
# automatically propagate. You need to restart the pod with
# `kubectl rollout restart deployment ca-download-deployment -n cert-manager`
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ca-download-deployment
  namespace: cert-manager
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ca-download
  template:
    metadata:
      labels:
        app: ca-download
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: html
              mountPath: /usr/share/nginx/html/index.html
              subPath: index.html
            - name: ca-cert
              mountPath: /usr/share/nginx/html/gohfert-ca.crt
              subPath: tls.crt
      volumes:
        - name: html
          configMap:
            name: ca-download-page
        - name: ca-cert
          secret:
            secretName: gohfert-ca-secret
