kubernetes/cert-manager/ca-download/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ca-download-ingress
  namespace: cert-manager
  annotations:
    # HTTP only - users need this before they can trust HTTPS
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: ca.gohfert.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ca-download-service
                port:
                  number: 80
